--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,12 @@ name = "rpq"
 path = "src/lib.rs"
 
 [dependencies]
+bincode = "1.3.3"
+chrono = { version = "0.4.38", features = ["serde"] }
 flamegraph = "0.6.5"
 rand = "0.8.4"
+redb = "2.1.1"
+serde = { version = "1.0.208", features = ["derive"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 
 [profile.test]
