--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ flamegraph = "0.6.5"
 rand = "0.8.4"
 redb = "2.1.1"
 serde = { version = "1.0.208", features = ["derive"] }
+tokio = { version = "1.10.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 
 [profile.test]
