--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,16 @@ path = "src/lib.rs"
 [dependencies]
 bincode = "1.3.3"
 chrono = { version = "0.4.38", features = ["serde"] }
+csv = "1.3.0"
 rand = "0.8.4"
 redb = "2.1.1"
 serde = { version = "1.0.208", features = ["derive"] }
 tokio = { version = "1.10.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4"] }
+
+[[bin]]
+name = "rpq-graphs"
+path = "src/graphs/main.rs"
 
 [profile.test]
 inherits = "release"
