--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "rpq"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Justin Timperio"]
 description = "A high performance embeddable double priority queue with complex priority ordering guarantees"
-license = "MIT"
 license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/JustinTimperio/rpq"
@@ -14,7 +13,6 @@ keywords = [
     "priority-queue-library",
     "rpq",
 ]
-exclude = ["graphs", "perf.data", "perf.data.old"]
 
 [lib]
 name = "rpq"
@@ -30,9 +28,8 @@ serde = { version = "1.0.208", features = ["derive"] }
 tokio = { version = "1.10.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 
-[[bin]]
-name = "rpq-graphs"
-path = "graphs/main.rs"
-
 [profile.test]
 inherits = "release"
+
+[workspace]
+members = ["graphs"]
