--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ csv = "1.3.0"
 rand = "0.8.4"
 redb = "2.1.1"
 serde = { version = "1.0.208", features = ["derive"] }
+serde_with = { version = "3.9.0", features = ["chrono"] }
 tokio = { version = "1.10.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 
