--- a/graphs/Cargo.toml
+++ b/graphs/Cargo.toml
@@ -2,3 +2,11 @@
 name = "graphs"
 version = "0.1.0"
 edition = "2021"
+
+
+[dependencies]
+chrono = "0.4.38"
+csv = "1.3.0"
+rand = "0.8.4"
+tokio = { version = "1.10.0", features = ["full"] }
+rpq = { path = "../" }
