--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,11 @@ path = "src/lib.rs"
 [dependencies]
 bincode = "1.3.3"
 chrono = { version = "0.4.38", features = ["serde"] }
-csv = "1.3.0"
 rand = "0.8.4"
 redb = "2.1.1"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_with = { version = "3.9.0", features = ["chrono"] }
+thiserror = "1.0.63"
 tokio = { version = "1.10.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 
